--- a/index.css
+++ b/index.css
@@ -2,3 +2,13 @@
     margin: 0px;
     padding: 0px;
 }
+    body {
+      background-color: black;
+      color: white;
+      padding: 0;
+      margin: 0;
+    }
+    img {
+      height: 300px;
+      width: 300px;
+    }
